--- a/Russell Peters Soundboard.WindowsPhone/MainPage.xaml
+++ b/Russell Peters Soundboard.WindowsPhone/MainPage.xaml
@@ -9,6 +9,127 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
+        <ListView>
+            <ListViewItem HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="120"></RowDefinition>
+                        <RowDefinition Height="120"></RowDefinition>
+                        <RowDefinition Height="120"></RowDefinition>
+                        <RowDefinition Height="120"></RowDefinition>
+                        <RowDefinition Height="120"></RowDefinition>
+                        <RowDefinition Height="120"></RowDefinition>
+                    </Grid.RowDefinitions>
+                    
+                    <Image Source="Assets\AmericanCulture.jpg"
+                           Stretch="Fill"></Image>
+                    <StackPanel 
+                        Grid.Column="1"
+                        VerticalAlignment="Center"
+                        HorizontalAlignment="Center">
+                        <TextBlock 
+                            Text="American Culture"
+                            FontSize="35"
+                            FontFamily="Comic Sans MS"
+                            TextAlignment="Center"
+                            TextWrapping="Wrap">
+                        </TextBlock>
+                    </StackPanel>
+                    
+                    <Image Source="Assets\ConvincingIndians.jpg"
+                           Grid.Row="1"
+                           Stretch="Fill"
+                           ></Image>
+                    <StackPanel
+                        Grid.Row="1"
+                        Grid.Column="1"
+                        VerticalAlignment="Center"
+                        HorizontalAlignment="Center">
+                        <TextBlock 
+                            Text="Convincing Indians"
+                            FontSize="35"
+                            FontFamily="Comic Sans MS"
+                            TextAlignment="Center"
+                            TextWrapping="Wrap">
+                        </TextBlock>
+                    </StackPanel>
+                    
+                    <Image Source="Assets\EnglishAccents.jpg"
+                           Grid.Row="2"
+                           Stretch="Fill"></Image>
+                    <StackPanel
+                        Grid.Row="2"
+                        Grid.Column="1"
+                        VerticalAlignment="Center"
+                        HorizontalAlignment="Center">
+                        <TextBlock 
+                            Text="English Accents"
+                            FontSize="35"
+                            FontFamily="Comic Sans MS"
+                            TextAlignment="Center"
+                            TextWrapping="Wrap">
+                        </TextBlock>
+                    </StackPanel>
+                    
+                    <Image Source="Assets\BeijingKFC.jpg"
+                           Grid.Row="3"
+                           Stretch="Fill"></Image>
+                    <StackPanel
+                        Grid.Row="3"
+                        Grid.Column="1"
+                        VerticalAlignment="Center"
+                        HorizontalAlignment="Center">
+                        <TextBlock 
+                            Text="Beijing KFC"
+                            FontSize="35"
+                            FontFamily="Comic Sans MS"
+                            TextAlignment="Center"
+                            TextWrapping="Wrap">
+                        </TextBlock>
+                    </StackPanel>
+                    
+                    
+                    <Image Source="Assets\TwoAsians.jpg"
+                           Grid.Row="4"
+                           Stretch="Fill"></Image>
+                    <StackPanel
+                        Grid.Row="4"
+                        Grid.Column="1"
+                        VerticalAlignment="Center"
+                        HorizontalAlignment="Center">
+                        <TextBlock 
+                            Text="Two Types of Asians"
+                            FontSize="35"
+                            FontFamily="Comic Sans MS"
+                            TextAlignment="Center"
+                            TextWrapping="Wrap">
+                        </TextBlock>
+                    </StackPanel>
+                    
+                    <Image Source="Assets\WhitePeople.jpg"
+                           Grid.Row="5"
+                           Stretch="Fill"></Image>
+                    <StackPanel
+                        Grid.Row="5"
+                        Grid.Column="1"
+                        VerticalAlignment="Center"
+                        HorizontalAlignment="Center">
+                        <TextBlock 
+                            Text="White People"
+                            FontSize="35"
+                            FontFamily="Comic Sans MS"
+                            TextAlignment="Center"
+                            TextWrapping="Wrap">
+                        </TextBlock>
+                    </StackPanel>
 
+                </Grid>
+            </ListViewItem>
+        </ListView>
     </Grid>
 </Page>
