--- a/Comedian Soundboard.WindowsPhone/AudioPage.xaml
+++ b/Comedian Soundboard.WindowsPhone/AudioPage.xaml
@@ -21,12 +21,12 @@
 
     <Page.BottomAppBar>
         <CommandBar>
-            <AppBarButton Icon="Save" Label="Ringtone" Click="Save_Clicked" />
+            <AppBarButton Icon="Save" Label="Save" Click="Save_Clicked" />
         </CommandBar>
     </Page.BottomAppBar>
 
     <Grid x:Name="LayoutRoot">
-        <MediaElement Name="Audio" Visibility="Collapsed" AutoPlay="False" MediaOpened="Audio_MediaOpened"></MediaElement>
+        <MediaElement x:Name="Audio" Visibility="Collapsed" AutoPlay="False" MediaOpened="Audio_MediaOpened"></MediaElement>
         
         <Grid DataContext="{Binding Category}">
             <GridView x:Name="AudioGridView"
@@ -37,11 +37,36 @@
                 <GridView.ItemTemplate>
                     <DataTemplate>
                         <Grid>
-                            <Border BorderBrush="{ThemeResource PhoneAccentBrush}" BorderThickness="1" Height="100" Width="100" Tapped="Sound_Click"></Border>
-                            <ProgressBar x:Name="ProgressBar" Height="100" Width="100" Value="0" Tapped="Sound_Click" ></ProgressBar>
-                            <TextBlock Text="{Binding Subtitle}" TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Center" Tapped="Sound_Click"></TextBlock>
+                            <Border BorderBrush="{ThemeResource PhoneAccentBrush}" 
+                                    BorderThickness="1" 
+                                    Height="100"
+                                    Width="100" 
+                                    Tapped="Sound_Click">
+                                
+                            </Border>
+                            
+                            <ProgressBar x:Name="ProgressBar" 
+                                         PointerPressed="Pointer_Pressed"
+                                         PointerReleased="Pointer_Released" 
+                                         PointerCanceled="Pointer_Released"
+                                         PointerCaptureLost="Pointer_Released"
+                                         PointerExited="Pointer_Released"
+                                         Height="100" 
+                                         Width="100" 
+                                         Value="0" 
+                                         Tapped="Sound_Click">
+                            </ProgressBar>
+                            
+                            <TextBlock Text="{Binding Subtitle}" 
+                                       TextAlignment="Center" 
+                                       TextWrapping="Wrap" 
+                                       IsHitTestVisible="False" 
+                                       VerticalAlignment="Center" 
+                                       Tapped="Sound_Click">
+                            </TextBlock>
                         </Grid>
                     </DataTemplate>
+                    
                 </GridView.ItemTemplate>
             </GridView>
             
