Added in email functionality, relative sizing so that only 4 controls per line

--- a/Comedian Soundboard.WindowsPhone/MainPage.xaml
+++ b/Comedian Soundboard.WindowsPhone/MainPage.xaml
@@ -20,6 +20,14 @@
         </TransitionCollection>
     </Page.Transitions>
 
+    <Page.BottomAppBar>
+        <CommandBar>
+            <AppBarButton Icon="Comment"
+                          Label="Send Feedback"
+                          Click="Comment_Click">
+            </AppBarButton>
+        </CommandBar>
+    </Page.BottomAppBar>
     <Grid>
         <ListView SelectionMode="None"
                   ItemsSource="{Binding Groups}"
