--- a/Comedian Soundboard.WindowsPhone/AudioPage.xaml
+++ b/Comedian Soundboard.WindowsPhone/AudioPage.xaml
@@ -36,11 +36,10 @@
                 ContinuumNavigationTransitionInfo.ExitElementContainer="False">
                 <GridView.ItemTemplate>
                     <DataTemplate>
-                        <Grid>
+                        <Grid Margin="5,5,5,5">
                             <Border BorderBrush="{ThemeResource PhoneAccentBrush}" 
                                     BorderThickness="1" 
-                                    Height="100"
-                                    Width="100" 
+                                    Loaded="Border_Loaded"
                                     Tapped="Sound_Click">
                                 
                             </Border>
@@ -54,6 +53,7 @@
                                          Height="100" 
                                          Width="100" 
                                          Value="0" 
+                                         Loaded="ProgressBar_Loaded"
                                          Tapped="Sound_Click">
                             </ProgressBar>
                             
@@ -62,6 +62,7 @@
                                        TextWrapping="Wrap" 
                                        IsHitTestVisible="False" 
                                        VerticalAlignment="Center" 
+                                       Loaded="Subtitle_Loaded"
                                        Tapped="Sound_Click">
                             </TextBlock>
                         </Grid>
