Added random RGB to Audio Page borders

--- a/Comedian Soundboard.WindowsPhone/AudioPage.xaml
+++ b/Comedian Soundboard.WindowsPhone/AudioPage.xaml
@@ -44,11 +44,9 @@
                 <GridView.ItemTemplate>
                     <DataTemplate>
                         <Grid Margin="3,3,3,3">
-                            <Border BorderBrush="{ThemeResource PhoneAccentBrush}" 
-                                    BorderThickness="1" 
+                            <Border BorderThickness="1" 
                                     Loaded="Border_Loaded"
                                     Tapped="Sound_Click">
-                                
                             </Border>
                             
                             <ProgressBar x:Name="ProgressBar" 
