--- a/Comedian Soundboard.Shared/App.xaml
+++ b/Comedian Soundboard.Shared/App.xaml
@@ -2,7 +2,17 @@
     x:Class="Comedian_Soundboard.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:UI="using:Microsoft.Advertising.WinRT.UI"
     xmlns:local="using:Comedian_Soundboard">
 
-    
+    <Application.Resources>
+        <ResourceDictionary>
+            <Style TargetType="UI:AdControl" x:Key="HorizontalAd">
+                <Setter Property="HorizontalAlignment" Value="Center"></Setter>
+                <Setter Property="VerticalAlignment" Value="Center"></Setter>
+                <Setter Property="Width" Value="480"></Setter>
+                <Setter Property="Height" Value="80"></Setter>
+            </Style>
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
